# Sculptor3D

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
resources/coordinateSystem/: CenterSphere.stl  XAxis.stl  YAxis.stl  ZAxis.stl
resources/shader/: lampShader.frag  lightShader.frag  sphere.frag  sphere.vert
src/: baseDataTypes.h  main.cpp
src/algorithms/: MeshSmooth.cpp  MeshSmooth.h
src/model/: meshDataModel.cpp  meshDataModel.h
src/resources/: resources.qrc
src/ui/: InfoWidget.ui  MainWindow.ui  toolWidget.ui
src/utility/: makeGeometries.cpp  makeGeometries.h  sphere.cpp  sphere.h
src/view/: infoWidget.cpp  infoWidget.h  mainWindow.cpp  mainWindow.h  meshViewerWidget.cpp  meshViewerWidget.h  toolWidget.cpp  toolWidget.h  viewGLwidget.cpp  viewGLwidget.h
